tests/fixtures/fail/named_argument_order.sc
let subtract(left: i32, right: i32): i32 = left - right

let main(): i32 = subtract(right: 2, left: 44)
